# crossbillpy

./: .gitignore  README.md  pyproject.toml  test_http_pipeline_factory.py
.github/workflows/: test.yml
examples/: hello.py  http.py
scripts/: benchmark_server.py
src/crossbill/: __init__.py
src/crossbill/bytes/: __init__.py  client.py  pipeline_factory.py  request.py  request_codec.py  response.py  response_codec.py  server.py
src/crossbill/client/: __init__.py  client.py
src/crossbill/core/: __init__.py  closable.py  codec.py  combined_filter.py  filter.py  filtered_service.py  pipeline.py  pipeline_factory.py  reqrep.py  request.py  response.py  service.py
src/crossbill/http/: __init__.py  client.py  method.py  pipeline_factory.py  request.py  request_codec.py  response.py  response_codec.py  server.py  service.py  status.py
src/crossbill/redis/: __init__.py  big_number_codec.py  boolean_codec.py  bulk_error_codec.py  bulk_string_codec.py  double_codec.py  integer_codec.py  null_codec.py  simple_error_codec.py  simple_string_codec.py  verbatim_string_codec.py
src/crossbill/server/: __init__.py  server.py
src/crossbill/string/: __init__.py  client.py  pipeline_factory.py  request.py  request_codec.py  response.py  response_codec.py  server.py  service.py
src/crossbill/transport/: __init__.py  address.py  bridge.py
tests/: bytes.py  strings.py  test_address.py  test_bridge.py  test_bulk_string_codec.py  test_bytes.py  test_bytes_codec.py  test_client.py  test_closable.py  test_codec.py  test_filter.py  test_http.py  test_http_method.py  test_http_pipeline_factory.py  test_http_request.py  test_http_request_codec.py  test_http_response.py  test_http_response_codec.py  test_http_service.py  test_http_status.py  test_pipeline.py  test_pipeline_factory.py  test_request.py  test_response.py  test_server.py  test_service.py  test_strings.py
tests/crossbill/http/: test_http_request.py  test_http_response_codec.py  test_http_status.py
tests/crossbill/redis/: test_big_number_codec.py  test_boolean_codec.py  test_bulk_error_codec.py  test_bulk_string_codec.py  test_double_codec.py  test_integer_codec.py  test_null_codec.py  test_simple_error_codec.py  test_simple_string_codec.py  test_verbatim_string_codec.py
