[project]
name = "crossbill"
authors = [
    {name = "Ryan O'Neill", email = "ryanoneill@gmail.com"}
]
version = "0.1.0"
license = "MIT"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.urls]
Repository = "https://github.com/ryanoneill/crossbillpy"

[dependency-groups]
dev = [
    "anyio>=4.9.0",
    "ipython>=9.1.0",
    "pytest>=8.3.5",
    "ruff>=0.11.5",
    "trio>=0.29.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff.lint]
select = ["E", "F", "ANN", "D"]

[tool.ruff.lint.pydocstyle]
convention = "google"
