[project]
name = "crossbill"
authors = [
    {name = "Ryan O'Neill", email = "ryanoneill@gmail.com"}
]
version = "0.1.0"
license = "MIT"
description = "A library for building Finagle-style asynchronous clients and servers"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []
classifiers = ["Private :: Do Not Upload"]

[project.urls]
Repository = "https://github.com/ryanoneill/crossbillpy"

[dependency-groups]
dev = [
    "anyio>=4.9.0",
    "coverage>=7.8.0",
    "ipython>=9.1.0",
    "pytest>=8.3.5",
    "ruff>=0.11.5",
    "trio>=0.29.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff.lint]
select = ["E", "F", "ANN", "D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]

[tool.coverage.run]
branch = true
omit = ["tests/**"]
